feat: Tickets and Banner API Documentation
